# wagtail-svgmap

./: pyproject.toml
src/wagtail_svgmap/: blocks.py  mixins.py  models.py  signal_handlers.py
src/wagtail_svgmap/modeladmin/: __init__.py  image_maps.py  regions.py
src/wagtail_svgmap/tests/: conftest.py  test_admin.py  test_block.py  test_model.py  test_svg.py  utils.py
wsm_test/: models.py  settings.py  urls.py
wsm_test/migrations/: 0001_initial.py  0002_create_homepage.py
